Package_Tools/pas_units/gst/gstpad.pas

unit gstpad;

interface

uses
  glib280, common_GST, gstobject, gstpadtemplate, gsttask, gstbufferlist, gstevent;

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}

type
  PGstPadMode = ^TGstPadMode;
  TGstPadMode =  Longint;
  Const
    GST_PAD_MODE_NONE = 0;
    GST_PAD_MODE_PUSH = 1;
    GST_PAD_MODE_PULL = 2;

function gst_pad_mode_get_name(mode:TGstPadMode):Pgchar;cdecl;external gstreamerlib;

type
  PGstPadLinkReturn = ^TGstPadLinkReturn;
  TGstPadLinkReturn =  Longint;
  Const
    GST_PAD_LINK_OK = 0;
    GST_PAD_LINK_WRONG_HIERARCHY = -(1);
    GST_PAD_LINK_WAS_LINKED = -(2);
    GST_PAD_LINK_WRONG_DIRECTION = -(3);
    GST_PAD_LINK_NOFORMAT = -(4);
    GST_PAD_LINK_NOSCHED = -(5);
    GST_PAD_LINK_REFUSED = -(6);

type
  PGstFlowReturn = ^TGstFlowReturn;
  TGstFlowReturn =  Longint;
  Const
    GST_FLOW_CUSTOM_SUCCESS_2 = 102;
    GST_FLOW_CUSTOM_SUCCESS_1 = 101;
    GST_FLOW_CUSTOM_SUCCESS = 100;
    GST_FLOW_OK = 0;
    GST_FLOW_NOT_LINKED = -(1);
    GST_FLOW_FLUSHING = -(2);
    GST_FLOW_EOS = -(3);
    GST_FLOW_NOT_NEGOTIATED = -(4);
    GST_FLOW_ERROR = -(5);
    GST_FLOW_NOT_SUPPORTED = -(6);
    GST_FLOW_CUSTOM_ERROR = -(100);
    GST_FLOW_CUSTOM_ERROR_1 = -(101);
    GST_FLOW_CUSTOM_ERROR_2 = -(102);

function gst_flow_get_name(ret:TGstFlowReturn):Pgchar;cdecl;external gstreamerlib;
function gst_flow_to_quark(ret:TGstFlowReturn):TGQuark;cdecl;external gstreamerlib;
function gst_pad_link_get_name(ret:TGstPadLinkReturn):Pgchar;cdecl;external gstreamerlib;
type
  PGstPadLinkCheck = ^TGstPadLinkCheck;
  TGstPadLinkCheck =  Longint;
  Const
    GST_PAD_LINK_CHECK_NOTHING = 0;
    GST_PAD_LINK_CHECK_HIERARCHY = 1 shl 0;
    GST_PAD_LINK_CHECK_TEMPLATE_CAPS = 1 shl 1;
    GST_PAD_LINK_CHECK_CAPS = 1 shl 2;
    GST_PAD_LINK_CHECK_NO_RECONFIGURE = 1 shl 3;
    GST_PAD_LINK_CHECK_DEFAULT = GST_PAD_LINK_CHECK_HIERARCHY or GST_PAD_LINK_CHECK_CAPS;


  type
    PGstPad = ^TGstPad;

    TGstPadActivateFunction = function (pad:PGstPad; parent:PGstObject):Tgboolean;cdecl;
    TGstPadActivateModeFunction = function (pad:PGstPad; parent:PGstObject; mode:TGstPadMode; active:Tgboolean):Tgboolean;cdecl;
    TGstPadChainFunction = function (pad:PGstPad; parent:PGstObject; buffer:PGstBuffer):TGstFlowReturn;cdecl;
    TGstPadChainListFunction = function (pad:PGstPad; parent:PGstObject; list:PGstBufferList):TGstFlowReturn;cdecl;
    TGstPadGetRangeFunction = function (pad:PGstPad; parent:PGstObject; offset:Tguint64; length:Tguint; buffer:PPGstBuffer):TGstFlowReturn;cdecl;
    TGstPadEventFunction = function (pad:PGstPad; parent:PGstObject; event:PGstEvent):Tgboolean;cdecl;
    TGstPadEventFullFunction = function (pad:PGstPad; parent:PGstObject; event:PGstEvent):TGstFlowReturn;cdecl;

    PGstPadIterIntLinkFunction = ^TGstPadIterIntLinkFunction;
    TGstPadIterIntLinkFunction = function (pad:PGstPad; parent:PGstObject):PGstIterator;cdecl;

    TGstPadQueryFunction = function (pad:PGstPad; parent:PGstObject; query:PGstQuery):Tgboolean;cdecl;
    TGstPadLinkFunction = function (pad:PGstPad; parent:PGstObject; peer:PGstPad):TGstPadLinkReturn;cdecl;
    TGstPadUnlinkFunction = procedure (pad:PGstPad; parent:PGstObject);cdecl;
    TGstPadForwardFunction = function (pad:PGstPad; user_data:Tgpointer):Tgboolean;cdecl;

    TGstPad = record
        obj : TGstObject;
        element_private : Tgpointer;
        padtemplate : PGstPadTemplate;
        direction : TGstPadDirection;
        stream_rec_lock : TGRecMutex;
        task : PGstTask;
        block_cond : TGCond;
        probes : TGHookList;
        mode : TGstPadMode;
        activatefunc : TGstPadActivateFunction;
        activatedata : Tgpointer;
        activatenotify : TGDestroyNotify;
        activatemodefunc : TGstPadActivateModeFunction;
        activatemodedata : Tgpointer;
        activatemodenotify : TGDestroyNotify;
        peer : PGstPad;
        linkfunc : TGstPadLinkFunction;
        linkdata : Tgpointer;
        linknotify : TGDestroyNotify;
        unlinkfunc : TGstPadUnlinkFunction;
        unlinkdata : Tgpointer;
        unlinknotify : TGDestroyNotify;
        chainfunc : TGstPadChainFunction;
        chaindata : Tgpointer;
        chainnotify : TGDestroyNotify;
        chainlistfunc : TGstPadChainListFunction;
        chainlistdata : Tgpointer;
        chainlistnotify : TGDestroyNotify;
        getrangefunc : TGstPadGetRangeFunction;
        getrangedata : Tgpointer;
        getrangenotify : TGDestroyNotify;
        eventfunc : TGstPadEventFunction;
        eventdata : Tgpointer;
        eventnotify : TGDestroyNotify;
        offset : Tgint64;
        queryfunc : TGstPadQueryFunction;
        querydata : Tgpointer;
        querynotify : TGDestroyNotify;
        iterintlinkfunc : TGstPadIterIntLinkFunction;
        iterintlinkdata : Tgpointer;
        iterintlinknotify : TGDestroyNotify;
        num_probes : Tgint;
        num_blocked : Tgint;
        priv : PGstPadPrivate;
        ABI : record
            case longint of
              0 : ( _gst_reserved : array[0..(GST_PADDING)-1] of Tgpointer );
              1 : ( abi : record
                  last_flowret : TGstFlowReturn;
                  eventfullfunc : TGstPadEventFullFunction;
                end );
            end;
      end;


type
  PGstPadProbeType = ^TGstPadProbeType;
  TGstPadProbeType =  Longint;
  Const
    GST_PAD_PROBE_TYPE_INVALID = 0;
    GST_PAD_PROBE_TYPE_IDLE = 1 shl 0;
    GST_PAD_PROBE_TYPE_BLOCK = 1 shl 1;
    GST_PAD_PROBE_TYPE_BUFFER = 1 shl 4;
    GST_PAD_PROBE_TYPE_BUFFER_LIST = 1 shl 5;
    GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM = 1 shl 6;
    GST_PAD_PROBE_TYPE_EVENT_UPSTREAM = 1 shl 7;
    GST_PAD_PROBE_TYPE_EVENT_FLUSH = 1 shl 8;
    GST_PAD_PROBE_TYPE_QUERY_DOWNSTREAM = 1 shl 9;
    GST_PAD_PROBE_TYPE_QUERY_UPSTREAM = 1 shl 10;
    GST_PAD_PROBE_TYPE_PUSH = 1 shl 12;
    GST_PAD_PROBE_TYPE_PULL = 1 shl 13;
    GST_PAD_PROBE_TYPE_BLOCKING = GST_PAD_PROBE_TYPE_IDLE or GST_PAD_PROBE_TYPE_BLOCK;
    GST_PAD_PROBE_TYPE_DATA_DOWNSTREAM = (GST_PAD_PROBE_TYPE_BUFFER or GST_PAD_PROBE_TYPE_BUFFER_LIST) or GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM;
    GST_PAD_PROBE_TYPE_DATA_UPSTREAM = GST_PAD_PROBE_TYPE_EVENT_UPSTREAM;
    GST_PAD_PROBE_TYPE_DATA_BOTH = GST_PAD_PROBE_TYPE_DATA_DOWNSTREAM or GST_PAD_PROBE_TYPE_DATA_UPSTREAM;
    GST_PAD_PROBE_TYPE_BLOCK_DOWNSTREAM = GST_PAD_PROBE_TYPE_BLOCK or GST_PAD_PROBE_TYPE_DATA_DOWNSTREAM;
    GST_PAD_PROBE_TYPE_BLOCK_UPSTREAM = GST_PAD_PROBE_TYPE_BLOCK or GST_PAD_PROBE_TYPE_DATA_UPSTREAM;
    GST_PAD_PROBE_TYPE_EVENT_BOTH = GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM or GST_PAD_PROBE_TYPE_EVENT_UPSTREAM;
    GST_PAD_PROBE_TYPE_QUERY_BOTH = GST_PAD_PROBE_TYPE_QUERY_DOWNSTREAM or GST_PAD_PROBE_TYPE_QUERY_UPSTREAM;
    GST_PAD_PROBE_TYPE_ALL_BOTH = GST_PAD_PROBE_TYPE_DATA_BOTH or GST_PAD_PROBE_TYPE_QUERY_BOTH;
    GST_PAD_PROBE_TYPE_SCHEDULING = GST_PAD_PROBE_TYPE_PUSH or GST_PAD_PROBE_TYPE_PULL;
type
  PGstPadProbeReturn = ^TGstPadProbeReturn;
  TGstPadProbeReturn =  Longint;
  Const
    GST_PAD_PROBE_DROP = 0;
    GST_PAD_PROBE_OK = 1;
    GST_PAD_PROBE_REMOVE = 2;
    GST_PAD_PROBE_PASS = 3;
    GST_PAD_PROBE_HANDLED = 4;
type
  PGstPadProbeInfo = ^TGstPadProbeInfo;
  TGstPadProbeInfo = record
      _type : TGstPadProbeType;
      id : Tgulong;
      data : Tgpointer;
      offset : Tguint64;
      size : Tguint;
      ABI : record
          case longint of
            0 : ( _gst_reserved : array[0..(GST_PADDING)-1] of Tgpointer );
            1 : ( abi : record
                flow_ret : TGstFlowReturn;
              end );
          end;
    end;


function gst_pad_probe_info_get_event(info:PGstPadProbeInfo):PGstEvent;cdecl;external gstreamerlib;
function gst_pad_probe_info_get_query(info:PGstPadProbeInfo):PGstQuery;cdecl;external gstreamerlib;
function gst_pad_probe_info_get_buffer(info:PGstPadProbeInfo):PGstBuffer;cdecl;external gstreamerlib;
function gst_pad_probe_info_get_buffer_list(info:PGstPadProbeInfo):PGstBufferList;cdecl;external gstreamerlib;
type
  TGstPadProbeCallback = function (pad:PGstPad; info:PGstPadProbeInfo; user_data:Tgpointer):TGstPadProbeReturn;cdecl;
  TGstPadStickyEventsForeachFunction = function (pad:PGstPad; event:PPGstEvent; user_data:Tgpointer):Tgboolean;cdecl;

  PGstPadFlags = ^TGstPadFlags;
  TGstPadFlags =  Longint;
  Const
    GST_PAD_FLAG_BLOCKED = GST_OBJECT_FLAG_LAST shl 0;
    GST_PAD_FLAG_FLUSHING = GST_OBJECT_FLAG_LAST shl 1;
    GST_PAD_FLAG_EOS = GST_OBJECT_FLAG_LAST shl 2;
    GST_PAD_FLAG_BLOCKING = GST_OBJECT_FLAG_LAST shl 3;
    GST_PAD_FLAG_NEED_PARENT = GST_OBJECT_FLAG_LAST shl 4;
    GST_PAD_FLAG_NEED_RECONFIGURE = GST_OBJECT_FLAG_LAST shl 5;
    GST_PAD_FLAG_PENDING_EVENTS = GST_OBJECT_FLAG_LAST shl 6;
    GST_PAD_FLAG_FIXED_CAPS = GST_OBJECT_FLAG_LAST shl 7;
    GST_PAD_FLAG_PROXY_CAPS = GST_OBJECT_FLAG_LAST shl 8;
    GST_PAD_FLAG_PROXY_ALLOCATION = GST_OBJECT_FLAG_LAST shl 9;
    GST_PAD_FLAG_PROXY_SCHEDULING = GST_OBJECT_FLAG_LAST shl 10;
    GST_PAD_FLAG_ACCEPT_INTERSECT = GST_OBJECT_FLAG_LAST shl 11;
    GST_PAD_FLAG_ACCEPT_TEMPLATE = GST_OBJECT_FLAG_LAST shl 12;
    GST_PAD_FLAG_LAST = GST_OBJECT_FLAG_LAST shl 16;
type
  PGstPadClass = ^TGstPadClass;
  TGstPadClass = record
      parent_class : TGstObjectClass;
      linked : procedure (pad:PGstPad; peer:PGstPad);cdecl;
      unlinked : procedure (pad:PGstPad; peer:PGstPad);cdecl;
      _gst_reserved : array[0..(GST_PADDING)-1] of Tgpointer;
    end;

function gst_pad_get_type:TGType;cdecl;external gstreamerlib;
function gst_pad_new(name:Pgchar; direction:TGstPadDirection):PGstPad;cdecl;external gstreamerlib;
function gst_pad_new_from_template(templ:PGstPadTemplate; name:Pgchar):PGstPad;cdecl;external gstreamerlib;
function gst_pad_new_from_static_template(templ:PGstStaticPadTemplate; name:Pgchar):PGstPad;cdecl;external gstreamerlib;
